[DOCS-1219] Fix for dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -82,6 +82,14 @@ img {
   text-decoration-skip-ink: none;
 }
 
+[data-theme='dark'] .markdown a:not(.card) {
+  color: #71aaeb;
+}
+
+[data-theme='dark'] .markdown a:not(.card):hover {
+  color: #5788e2;
+}
+
 .tabs-container {
   border-left: 3px solid var(--ifm-color-primary-light);
   padding-left: 0.75rem;
